# breadboard

./: .env.example  .gitignore  Dockerfile  README.md  Tiltfile  main.py  pyproject.toml  yahoo_finance_websocket_guide.md  yahoo_websocket_client.py
.github/workflows/: test.yml
airflow/: Dockerfile
airflow/dags/: historical_data_dag.py
backend/: Dockerfile  __init__.py  config.py  db.py  main.py  processor.py  schema.sql
backend/api/: __init__.py  dependencies.py  schemas.py
backend/api/routes/: health.py  history.py  stocks.py
backend/api/websocket/: realtime.py
backend/domain/: __init__.py  entities.py  interfaces.py
backend/infrastructure/: airflow_tasks.py  scheduler.py  yahoo_client.py  yahoo_websocket_client.py
backend/repository/: __init__.py  clickhouse_client.py  stock_repository.py
backend/services/: __init__.py  alert_service.py  historical_service.py  stock_service.py
dashboard/: Dockerfile  __init__.py  app.py
k8s/: airflow-values.yaml  app.yml  backend.yml  clickhouse-init.yml  clickhouse.yml  dashboard.yml  namespace.yml
plan/: design.md  epic_initial_poc.md  epic_refactor_flink_airflow_nats.md
scripts/: run_airflow.sh
tests/: __init__.py  conftest.py  test_airflow_dag.py
